--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, Javascript!</h1>
     <script src="js/app.js"></script>
 </body>
 </html>
